--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,10 @@
   text-align: center;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+.header {
+  display: flex;
+  justify-content: space-between;
+  
 }
+
+.
