--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,3 +1,11 @@
 .card-container {
     border: 1px solid gray;
-    margin: 10px 2
+    margin: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.name {
+    font-weight: 500;
+    font-size: 25px;
+}
